--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<title>book-formats</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous">
   <link rel="stylesheet" type="text/css" href="style.css">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
@@ -60,12 +61,12 @@
 
 <span>
   <div class="div span">
-    <span class="span-1">
-      <img class="logo"  src="images/audiblelogo.png">
-      <p class="para">Audiobook</p>
-    </span>
+    <div class="span-1">
+      <!-- <img class="logo"  src="images/audiblelogo.png"> -->
+      <p class="para"><i class="fab fa-audible"></i>Audiobook</p>
+   
     <p class="grey">$0.00</p>
-    
+     </div>
   </div>
   <div>
     <p class="color-blue">  <span class="free">Free</span> with your Audible trial</p>
